2018-06-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_imap.c (lbm_imap_check): Object-ref handle
	while we check for a list-response.

2018-06-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_is_active_notify),
	(bw_display_new_mail_notification):
	get the application from the window, not using g_object_get();

2018-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* configure.ac, Makefile.am, meson.build: Rename balsa.desktop
	to org.desktop.Balsa.desktop.

2018-06-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (view_source_activated), (bw_set_menus):
	get the application from the window, not using g_object_get();
	(balsa_window_new): do not leak adjustments.

2018-06-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Migrate new mail notification from NotifyNotification to
	GNotification.

	* src/main-window.c (bw_is_active_notify),
	(check_new_messages_count), (bw_display_new_mail_notification):
	Migrate new mail notification from NotifyNotification to
	GNotification.
	* src/main-window.h: Use a boolean to remember when a
	notification is being shown.

2018-06-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (view_source_activated), (bw_set_menus): Do
	not leak application.

2018-06-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c
	(balsa_window_new): Pass the GtkApplication as an argument to
	balsa_window_new();
	(view_source_activated), (bw_set_menus): Get the GtkApplication
	as a property of BalsaWindow, instead of from the balsa-app
	structure;
	* src/main-window.h: New API for balsa_window_new().

2018-06-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main.c (balsa_startup_cb), (balsa_shutdown_cb),
	(balsa_activate_cb), (balsa_command_line_cb), (main): Use all the
	GApplication signals, instead of doing it all in the
	command-line handler.

2018-06-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
